# inertialai-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-inertialai-python.yml  publish-inertialai-python.yml
src/inertialai_python/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _resource.py
src/inertialai_python/resources/: __init__.py  embeddings.py
src/inertialai_python/types/: __init__.py  embedding_create_params.py  embedding_model.py  embedding_response.py
tests/: conftest.py  test_client.py  test_embeddings.py  test_exceptions.py  test_retry.py  test_types.py
tests/integration/: test_embeddings.py
