[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inertialai-python"
version = "0.1.0"
description = "The official Python client for the InertialAI API — generate multi-modal embeddings from time-series and text."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "InertialAI", email = "jeremy.levasseur@inertialai.com" }]
requires-python = ">=3.11"
keywords = ["inertialai", "embeddings", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://www.inertialai.com"
Documentation = "https://docs.inertialai.com"
Repository = "https://github.com/InertialAI/inertialai-python"
Changelog = "https://github.com/InertialAI/inertialai-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "docformatter>=1.7.7",
    "mypy>=1.19.1",
    "prek>=0.3.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.20",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.5",
]

# ── Hatch build config ────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/inertialai_python"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["inertialai_python"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

# ── Bandit ─────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = [
    "tests"
]
